--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class="row mt-3 ml-3 mt-md-0">
-                        <div class="title-big"><b>SERVICE A</b></div>
+                        <div class="title-big">SERVICE A</div>
                     </div>
                 </div>
                 
